fix: correct user/repo in goreleaser.yml

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,13 +2,21 @@ builds:
   - main: ./cmd/v1nage
     env: 
     - CGO_ENABLED=0
+    goarch:
+      - amd64
+        arm64
+    ignore:
+      - goos: windows
+        goarch: arm64
+      - goos: darwin
+        goarch: amd64
 
 release:
   # Repo in which the release will be created.
   # Default: extracted from the origin remote URL or empty if its private hosted.
   github:
-    owner: user
-    name: repo
+    owner: nsupc
+    name: v1nage
 
   # If set to true, will not auto-publish the release.
   # Note: all GitHub releases start as drafts while artifacts are uploaded.
