--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,7 +4,7 @@ builds:
     - CGO_ENABLED=0
     goarch:
       - amd64
-        arm64
+      - arm64
     ignore:
       - goos: windows
         goarch: arm64
