--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ name: goreleaser
 on:
   pull_request:
   push:
-    branches:
-      - main
+    tags:
+      - "*"
 
 permissions:
   contents: write
