--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -88,7 +88,7 @@ release:
   # URL, for instance, homebrew taps.
   #
   # Templates: allowed.
-  disable: true
+  disable: false
 
   # Set this to true if you want to disable just the artifact upload to the SCM.
   # If this is true, GoReleaser will still create the release with the
