--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,8 +2,8 @@ version: 2
 
 builds:
   - main: ./cmd/v1nage
-    env: 
-    - CGO_ENABLED=0
+    env:
+      - CGO_ENABLED=0
     goarch:
       - amd64
       - arm64
@@ -48,7 +48,6 @@ release:
   # that matches the one we're trying to upload.
   # GoReleaser will then retry its upload.
   replace_existing_artifacts: true
-
 
   # If set to auto, will mark the release as not ready for production
   # in case there is an indicator for this in the tag e.g. v1.0.0-rc1
@@ -96,3 +95,8 @@ release:
   #
   # Templates: allowed.
   skip_upload: false
+
+archives:
+  - files:
+      - README.md
+      - config.yml.template
