--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,7 +23,7 @@ release:
   # If set to true, will not auto-publish the release.
   # Note: all GitHub releases start as drafts while artifacts are uploaded.
   # Available only for GitHub and Gitea.
-  draft: true
+  draft: false
 
   # Whether to remove existing draft releases with the same name before creating
   # a new one.
@@ -36,7 +36,7 @@ release:
   #
   # Available only for GitHub.
   # Since: v2.5.
-  use_existing_draft: true
+  use_existing_draft: false
 
   # Whether to remove an artifact that already exists.
   #
